working version
Signed-off-by: Juergen Albert <j.albert@data-in-motion.biz>